--- a/.github/workflows/export_godot_files.yml
+++ b/.github/workflows/export_godot_files.yml
@@ -16,7 +16,7 @@ jobs:
             # Always include the checkout step so that
             # your project is available for Godot to export
             - name: checkout
-                uses: actions/checkout@v2
+              uses: actions/checkout@v2
 
             # - name: Set up JDK 1.8
             #   uses: actions/setup-java@v3
@@ -34,13 +34,11 @@ jobs:
 
                 # Automatically stores the tag name for later use
             - name: get tag from version
-                id: tag_version
-                run: |
-                echo "TAG_VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
+              id: tag_version
+              run: echo "TAG_VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
             - name: export game
-                # Use latest version (see releases for all versions)
-                uses: firebelley/godot-export@v4.6.0
-                with:
+              uses: firebelley/godot-export@v4.6.0
+              with:
                 # Defining all the required inputs
                 godot_executable_download_url: https://downloads.tuxfamily.org/godotengine/3.5.1/Godot_v3.5.1-stable_linux_headless.64.zip
                 godot_export_templates_download_url: https://downloads.tuxfamily.org/godotengine/3.5.1/Godot_v3.5.1-stable_export_templates.tpz
@@ -52,16 +50,16 @@ jobs:
             - run: cp HTML5/hedgelizards_ggj23.html HTML5/index.html
             - run: find HTML5
             - name: publish page
-                uses: peaceiris/actions-gh-pages@v3
-                if: ${{ github.ref == 'refs/heads/master' }}
-                with:
+              uses: peaceiris/actions-gh-pages@v3
+              if: ${{ github.ref == 'refs/heads/master' }}
+              with:
                 github_token: ${{ secrets.GITHUB_TOKEN }}
                 publish_dir: ./HTML5
 
             - name: create release
-                uses: ncipollo/release-action@v1.11.2
-                with:
-                    token: ${{ secrets.GITHUB_TOKEN }}
-                    generateReleaseNotes: true
-                    tag: v${{ steps.tag_version.outputs.TAG_VERSION }} # Note that the 'v' in front was necessary to get this action attach artifacts to the tag
-                    artifacts: ${{ steps.export.outputs.archive_directory }}/*
+              uses: ncipollo/release-action@v1.11.2
+              with:
+                token: ${{ secrets.GITHUB_TOKEN }}
+                generateReleaseNotes: true
+                tag: v${{ steps.tag_version.outputs.TAG_VERSION }} # Note that the 'v' in front was necessary to get this action attach artifacts to the tag
+                artifacts: ${{ steps.export.outputs.archive_directory }}/*
