try to release the actual exports

--- a/.github/workflows/export_godot_files.yml
+++ b/.github/workflows/export_godot_files.yml
@@ -62,4 +62,4 @@ jobs:
                 token: ${{ secrets.GITHUB_TOKEN }}
                 generateReleaseNotes: true
                 tag: v${{ steps.tag_version.outputs.TAG_VERSION }} # Note that the 'v' in front was necessary to get this action attach artifacts to the tag
-                artifacts: ${{ steps.export.outputs.archive_directory }}/*
+                artifacts: ${{ steps.export.outputs.archive_directory }}/exports/*
