--- a/.github/workflows/export_godot_files.yml
+++ b/.github/workflows/export_godot_files.yml
@@ -32,10 +32,6 @@ jobs:
             # - run: keytool -keyalg RSA -genkeypair -alias androiddebugkey -keypass android -keystore debug.keystore -storepass android -dname "CN=Android Debug,O=Android,C=US" -validity 9999 -deststoretype pkcs12
             # - run: find / 2>/dev/null | grep -i "debug.keystore"
 
-                # Automatically stores the tag name for later use
-            - name: get tag from version
-              id: tag_version
-              run: echo "TAG_VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
             - name: export game
               id: export
               uses: firebelley/godot-export@v4.6.0
@@ -64,6 +60,5 @@ jobs:
               with:
                 token: ${{ secrets.GITHUB_TOKEN }}
                 generateReleaseNotes: true
-                tag: v${{ steps.tag_version.outputs.TAG_VERSION }} # Note that the 'v' in front was necessary to get this action attach artifacts to the tag
                 artifacts: ${{ steps.export.outputs.archive_directory }}/*
-                allowUpdates: true
+                replacesArtifacts: true
