--- a/.github/workflows/export_godot_files.yml
+++ b/.github/workflows/export_godot_files.yml
@@ -31,6 +31,9 @@ jobs:
             #     fetch-depth: 0
             # - run: keytool -keyalg RSA -genkeypair -alias androiddebugkey -keypass android -keystore debug.keystore -storepass android -dname "CN=Android Debug,O=Android,C=US" -validity 9999 -deststoretype pkcs12
             # - run: find / 2>/dev/null | grep -i "debug.keystore"
+            - name: get tag from version
+              id: tag_version
+              run: echo "TAG_VERSION=${date -uIseconds}" >> $GITHUB_OUTPUT
 
             - name: export game
               id: export
@@ -62,3 +65,4 @@ jobs:
                 generateReleaseNotes: true
                 artifacts: ${{ steps.export.outputs.archive_directory }}/*
                 replacesArtifacts: true
+                tag: v${{ steps.tag_version.outputs.TAG_VERSION }}
