--- a/.github/workflows/export_godot_files.yml
+++ b/.github/workflows/export_godot_files.yml
@@ -66,3 +66,4 @@ jobs:
                 artifacts: ${{ steps.export.outputs.archive_directory }}/*
                 replacesArtifacts: true
                 tag: v${{ steps.tag_version.outputs.TAG_VERSION }}
+                commit: ${{ github.ref }}
