--- a/.github/workflows/export_godot_files.yml
+++ b/.github/workflows/export_godot_files.yml
@@ -33,7 +33,8 @@ jobs:
             # - run: find / 2>/dev/null | grep -i "debug.keystore"
             - name: get tag from version
               id: tag_version
-              run: echo "TAG_VERSION=$(date -u +"%Y%m%d.%H.%M.%S")" >> $GITHUB_OUTPUT
+              run: echo "TAG_VERSION=0.1.$(date -u +"%s")" >> $GITHUB_OUTPUT
+            - run: echo "${{ steps.tag_version.outputs.TAG_VERSION }}" > version.txt
 
             - name: export game
               id: export
