fetch complete history in pipeline

--- a/.github/workflows/export_godot_files.yml
+++ b/.github/workflows/export_godot_files.yml
@@ -15,7 +15,9 @@ jobs:
             # Always include the checkout step so that
             # your project is available for Godot to export
             - name: checkout
-              uses: actions/checkout@v2
+              uses: actions/checkout@v3
+              with:
+                fetch-depth: 0
 
             # - name: Set up JDK 1.8
             #   uses: actions/setup-java@v3
@@ -30,7 +32,7 @@ jobs:
             #     fetch-depth: 0
             # - run: keytool -keyalg RSA -genkeypair -alias androiddebugkey -keypass android -keystore debug.keystore -storepass android -dname "CN=Android Debug,O=Android,C=US" -validity 9999 -deststoretype pkcs12
             # - run: find / 2>/dev/null | grep -i "debug.keystore"
-            - run: echo "v0.1.$(git rev-list --count HEAD)" > version.tres
+            - run: echo "v0.1.$(git rev-list --count master)" > version.tres
             - name: get tag from version
               id: tag_version
               run: echo "TAG_VERSION=$(cat version.tres)" >> $GITHUB_OUTPUT
