return after colliding

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="exports/hedgelizards_ggj22.x86_64"
+export_path="exports/hedgelizards_uproot.x86_64"
 script_export_mode=1
 script_encryption_key=""
 
@@ -32,7 +32,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="exports/hedgelizards_ggj23.html"
+export_path="exports/hedgelizards_uproot.html"
 script_export_mode=1
 script_encryption_key=""
 
@@ -67,7 +67,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="exports/hedgelizards_ggj22.zip"
+export_path="exports/hedgelizards_uproot.zip"
 script_export_mode=1
 script_encryption_key=""
 
@@ -78,7 +78,7 @@ custom_template/release=""
 application/name=""
 application/info="Made with Godot Engine"
 application/icon=""
-application/identifier="com.hedgelizards.ggj22"
+application/identifier="com.hedgelizards.uproot"
 application/signature=""
 application/app_category="Games"
 application/short_version="1.0"
@@ -141,7 +141,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="exports/hedgelizards_ggj22.exe"
+export_path="exports/hedgelizards_uproot.exe"
 script_export_mode=1
 script_encryption_key=""
 
